# software-modeling-1

./: README.md
first_workshop/: README.md  cli.py  main_classes.py
second_workshop/: README.md  machines.py  main.py  pyproject.toml  users.py  videogames.py
workspace/: README.md
